kube/services/netpolicy/base/allowdns_netpolicy.yaml
apiVersion: networking.k8s.io/v1
kind: NetworkPolicy
metadata:
  name: networkpolicy-allowdns
spec:
  podSelector:
    matchLabels: {}
  egress:
  - to:
    - namespaceSelector:
       {}
    ports:
    - protocol: TCP
      port: 53
    - protocol: UDP
      port: 53

  policyTypes:
  - Egress
